# timberlogs-rust-sdk

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: mint.json
docs/sdks/: rust-configuration.mdx  rust.mdx
examples/: basic.rs
src/: client.rs  error.rs  lib.rs  types.rs
tests/: client_test.rs
